// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults matches the snapshot 1`] = `
<SearchResults
  canCall={true}
  canMessage={true}
  loading={false}
  onPageNumberChange={[MockFunction]}
  onStartCall={[MockFunction]}
  pageNumber={0}
  users={
    Array [
      Object {
        "displayName": "Dr. Stephen Strange",
        "favorite": false,
        "id": "123",
        "overallStatus": "available",
        "profileImage": "https://www.fillmurray.com/60/60",
      },
      Object {
        "displayName": "Nurse Jacky",
        "favorite": true,
        "id": "4",
        "overallStatus": "busy",
        "profileImage": "https://www.fillmurray.com/100/100",
      },
      Object {
        "displayName": "Dr. Douglas Powers",
        "favorite": false,
        "id": "5",
        "overallStatus": "offline",
        "profileImage": "https://www.fillmurray.com/160/160",
      },
      Object {
        "displayName": "Una Brow",
        "favorite": true,
        "id": "1263",
        "overallStatus": "available",
        "profileImage": "https://www.fillmurray.com/200/200",
      },
    ]
  }
/>
`;

exports[`SearchResults matches the snapshot when loading 1`] = `
<SearchResults
  canCall={true}
  canMessage={true}
  loading={true}
  onPageNumberChange={[MockFunction]}
  onStartCall={[MockFunction]}
  pageNumber={0}
  users={
    Array [
      Object {
        "displayName": "Dr. Stephen Strange",
        "favorite": false,
        "id": "123",
        "overallStatus": "available",
        "profileImage": "https://www.fillmurray.com/60/60",
      },
      Object {
        "displayName": "Nurse Jacky",
        "favorite": true,
        "id": "4",
        "overallStatus": "busy",
        "profileImage": "https://www.fillmurray.com/100/100",
      },
      Object {
        "displayName": "Dr. Douglas Powers",
        "favorite": false,
        "id": "5",
        "overallStatus": "offline",
        "profileImage": "https://www.fillmurray.com/160/160",
      },
      Object {
        "displayName": "Una Brow",
        "favorite": true,
        "id": "1263",
        "overallStatus": "available",
        "profileImage": "https://www.fillmurray.com/200/200",
      },
    ]
  }
/>
`;

exports[`SearchResults matches the snapshot with no users 1`] = `
<SearchResults
  canCall={true}
  canMessage={true}
  loading={false}
  onPageNumberChange={[MockFunction]}
  onStartCall={[MockFunction]}
  pageNumber={0}
  users={Array []}
/>
`;

exports[`SearchResults matches the snapshot with one user 1`] = `
<SearchResults
  canCall={true}
  canMessage={true}
  loading={false}
  onPageNumberChange={[MockFunction]}
  onStartCall={[MockFunction]}
  pageNumber={0}
  users={
    Array [
      Object {
        "displayName": "Una Brow",
        "favorite": true,
        "id": "1263",
        "overallStatus": "available",
        "profileImage": "https://www.fillmurray.com/200/200",
      },
    ]
  }
/>
`;

exports[`SearchResults matches the snapshot with with messaging off 1`] = `
<SearchResults
  canCall={true}
  canMessage={false}
  loading={false}
  onPageNumberChange={[MockFunction]}
  onStartCall={[MockFunction]}
  pageNumber={0}
  users={
    Array [
      Object {
        "displayName": "Dr. Stephen Strange",
        "favorite": false,
        "id": "123",
        "overallStatus": "available",
        "profileImage": "https://www.fillmurray.com/60/60",
      },
      Object {
        "displayName": "Nurse Jacky",
        "favorite": true,
        "id": "4",
        "overallStatus": "busy",
        "profileImage": "https://www.fillmurray.com/100/100",
      },
      Object {
        "displayName": "Dr. Douglas Powers",
        "favorite": false,
        "id": "5",
        "overallStatus": "offline",
        "profileImage": "https://www.fillmurray.com/160/160",
      },
      Object {
        "displayName": "Una Brow",
        "favorite": true,
        "id": "1263",
        "overallStatus": "available",
        "profileImage": "https://www.fillmurray.com/200/200",
      },
    ]
  }
/>
`;
